# delegate-cpp17

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  delegate.hpp  main.cpp
references/: Aleksei Trunov, CodeProject - Yet Another Generalized Functors Implementation in C++.html  Bert Peers - Callbacks in C++.html  Don Clugston, CodeProject - Member Function Pointers and the Fastest Possible C++ Delegates.html  JaeWook Choi, CodeProject - Fast C++ Delegate.html  Matthew Rodusek - Creating a Fast and Efficient Delegate Type p1.html  Matthew Rodusek - Creating a Fast and Efficient Delegate Type p2.html  Matthew Rodusek - Creating a Fast and Efficient Delegate Type p3.html  Rich Hickey - Callbacks in C++ Using Template Functors.html  Sergey Alexandrovich Kryukov, CodeProject - The Impossibly Fast C++ Delegates, Fixed.html  Sergey Ryazanov, CodeProject - The Impossibly Fast C++ Delegates.html  user1095108 - Impossibly fast delegate in C++11.html
